Extension notifications should show a pointer cursor

This indicates to users that they can click on the notification.
Extension notifications used to display the pointer cursor, but a
refactoring broke this in M61.

BUG=752005

Change-Id: I15c14b2d4a5a1da40cc3454841ed50a7366b4fd1